--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "country-list": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-whatsapp": "^0.3.0",
     "uuid": "^10.0.0"
   },
